--- a/html/index.html
+++ b/html/index.html
@@ -3,6 +3,10 @@
 <html>
 	<head>
 		<meta charset="utf-8">
+
+		<link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/jqueryui/1.11.4/themes/smoothness/jquery-ui.css">
+
+
 			<link rel="stylesheet" href="../css/reset.css">
 
 			<link rel="stylesheet" href="../css/font-awesome.min.css">
@@ -70,6 +74,13 @@
   				
   				<div id="copyright">Copyright 2015. Relaxr.</div>
 			</footer>
+
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
+    
+    <script src="js/index.js"></script>
+
+
+
 
 	</body>
 </html>
