main nav changes - monday 3.9

--- a/html/blog.html
+++ b/html/blog.html
@@ -6,6 +6,7 @@
 
 			<link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/jqueryui/1.11.4/themes/smoothness/jquery-ui.css">
 
+
 			<link rel="stylesheet" href="../css/reset.css">
 
 			<link rel="stylesheet" href="../css/font-awesome.min.css">
@@ -36,6 +37,7 @@
 					<a class="nav-link" href="blog.html">Blog</a>
 				</nav>
 			</div>
+			<div class="thickline"></div>
 		</header>
 
 			<section id="articles">
